--- a/lang/id.json
+++ b/lang/id.json
@@ -19,5 +19,9 @@
     "Owner": "Pemilik",
     "Login": "Masuk",
     "Why Use Helpdesk?": "Kenapa Menggunakan Helpdesk?",
-    "Reasons": "Helpdesk menyediakan dukungan yang efisien, menggabungkan komunikasi, menyederhanakan alur kerja, menyediakan opsi self-service, memantau kinerja, dan meningkatkan pengalaman pelanggan."
+    "Reasons": "Helpdesk menyediakan dukungan yang efisien, menggabungkan komunikasi, menyederhanakan alur kerja, menyediakan opsi self-service, memantau kinerja, dan meningkatkan pengalaman pelanggan.",
+    "Set PIC": "Atur Penanggungjawab",
+    "Change the PIC": "Ubah Penanggungjawab",
+    "The person in charge has changed": "Penanggungjawab telah diubah",
+    "Additional Information": "Informasi Tambahan"
 }
