send notification when ticket created

--- a/lang/en.json
+++ b/lang/en.json
@@ -23,5 +23,6 @@
     "Set PIC": "Set PIC",
     "Change the PIC": "Change the PIC",
     "The person in charge has changed": "The person in charge has changed",
-    "Additional Information": "Additional Information"
+    "Additional Information": "Additional Information",
+    "There is a new ticket that is your responsibility.": "There is a new ticket that is your responsibility."
 }
