--- a/lang/id.json
+++ b/lang/id.json
@@ -23,5 +23,6 @@
     "Set PIC": "Atur Penanggungjawab",
     "Change the PIC": "Ubah Penanggungjawab",
     "The person in charge has changed": "Penanggungjawab telah diubah",
-    "Additional Information": "Informasi Tambahan"
+    "Additional Information": "Informasi Tambahan",
+    "There is a new ticket that is your responsibility.": "Terdapat tiket baru yang menjadi tanggungjawab Anda."
 }
