--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,8 @@
     "Updated at": "Updated at",
     "Approved at": "Approved at",
     "Solved at": "Solved at",
+    "Created From": "Created From",
+    "Created Until": "Created Until",
     "Status": "Status",
     "Ticket Status": "Ticket Status",
     "Responsible": "Responsible",
