--- a/lang/id.json
+++ b/lang/id.json
@@ -11,6 +11,8 @@
     "Updated at": "Diperbarui pada",
     "Approved at": "Diterima pada",
     "Solved at": "Diselesaikan pada",
+    "Created From": "Dibuat Dari",
+    "Created Until": "Dibuat Sampai",
     "Status": "Status",
     "Ticket Status": "Status Tiket",
     "Responsible": "Penanggungjawab",
