Create latest ticket widget

--- a/lang/en.json
+++ b/lang/en.json
@@ -7,6 +7,7 @@
     "Problem Category": "Problem Category",
     "Description": "Description",
     "Priority": "Priority",
+    "Create Ticket": "Create Ticket",
     "Created at": "Created at",
     "Updated at": "Updated at",
     "Approved at": "Approved at",
