--- a/lang/id.json
+++ b/lang/id.json
@@ -7,6 +7,7 @@
     "Problem Category": "Kategori Masalah",
     "Description": "Deskripsi",
     "Priority": "Prioritas",
+    "Create Ticket": "Buat Tiket",
     "Created at": "Dibuat pada",
     "Updated at": "Diperbarui pada",
     "Approved at": "Diterima pada",
